[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Karasawa Goro <Karasawa.Goro@exc.epson.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
